--- a/style_rtl.css
+++ b/style_rtl.css
@@ -111,3 +111,7 @@ caption, th, td {
     border-left-width: 1px;
   }
 }
+
+#drawer {
+  float: left;
+}
